--- a/iamport-frontend/src/index.css
+++ b/iamport-frontend/src/index.css
@@ -13,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button {
+  color: #fff;
+  background-color: tomato;
+}
+
+li {
+  list-style: none;
+}
